--- a/VK/vulkan.csproj
+++ b/VK/vulkan.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0</TargetFrameworks>
 		
-		<AssemblyVersion>0.2.1</AssemblyVersion>
+		<AssemblyVersion>0.2.2</AssemblyVersion>
 		<AssemblyName>VK</AssemblyName>
 		<Description>Low level vulkan bindings for .net</Description>
 		<Product>VK</Product>
@@ -11,7 +11,7 @@
 		<PackageId>Vulkan</PackageId>
 		<PackageTags>C# vulkan net binding</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageVersion>$(AssemblyVersion)</PackageVersion>
+		<PackageVersion>$(AssemblyVersion)-beta</PackageVersion>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<PackageProjectUrl>https://github.com/jpbruyere/vk.net/blob/master/README.md</PackageProjectUrl>
 		<Icon>vk.net-64.png</Icon>
