--- a/VK/vulkan.csproj
+++ b/VK/vulkan.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0</TargetFrameworks>
 		
-		<AssemblyVersion>0.2.2.1</AssemblyVersion>
+		<AssemblyVersion>0.2.20</AssemblyVersion>
 		<AssemblyName>VK</AssemblyName>
 		<Description>Low level vulkan bindings for .net</Description>
 		<Product>VK</Product>
@@ -17,6 +17,9 @@
 		<Icon>vk.net-64.png</Icon>
 		<PackageIcon>vk.net-64.png</PackageIcon>
 		<SynchReleaseVersion>false</SynchReleaseVersion>
+		<PackageReleaseNotes>
+			
+		</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<ItemGroup>
