--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -13,6 +13,7 @@
 		<OutputPath>$(SolutionDir)build\$(Configuration)\</OutputPath>		
 
 		<LangVersion>7.2</LangVersion>
+		<ToolsFramework>net472</ToolsFramework>
 		
 	</PropertyGroup>
 </Project>
