--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,12 +8,8 @@
 		<Authors>Jean-Philippe Bruyère</Authors>
 		<Copyright></Copyright>
 		<Company></Company>
-		
-		<IntermediateOutputPath>$(SolutionDir)build\obj\$(Configuration)\</IntermediateOutputPath>
-		<OutputPath>$(SolutionDir)build\$(Configuration)\</OutputPath>		
 
-		<LangVersion>7.2</LangVersion>
-		<ToolsFramework>net472</ToolsFramework>
-		
+		<ToolsFramework>netcoreapp3.1</ToolsFramework>
+
 	</PropertyGroup>
 </Project>
