--- a/vulkan/vulkan.csproj
+++ b/vulkan/vulkan.csproj
@@ -24,7 +24,7 @@
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 
-		<NoWarn>$(NoWarn);1591</NoWarn>
+		<NoWarn>$(NoWarn);1591;0419</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
