--- a/vk.generator/vk.generator.csproj
+++ b/vk.generator/vk.generator.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>$(ToolsFramework)</TargetFramework>
 		<OutputType>Exe</OutputType>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<DefineConstants>$(DefineConstants);LOG_VK_NET_GEN</DefineConstants>
+		<DefineConstants>$(DefineConstants);LOG_VK_NET_GEN;DEBUG_STRUCT_SIZES</DefineConstants>
 	</PropertyGroup>
 
 </Project>
