--- a/vk.rewrite/vk.rewrite.csproj
+++ b/vk.rewrite/vk.rewrite.csproj
@@ -8,5 +8,8 @@
 	<ItemGroup>
 	  <PackageReference Include="Mono.Cecil" Version="0.11.4" />
 	</ItemGroup>
+	<PropertyGroup Condition=" '$(AutoSetSType)' == 'true'">
+		<DefineConstants>$(DefineConstants);AUTO_SET_STYPE</DefineConstants>
+	</PropertyGroup>
 
 </Project>
