--- a/vulkan/vulkan.csproj
+++ b/vulkan/vulkan.csproj
@@ -30,6 +30,10 @@
 		<NoWarn>$(NoWarn);1591;0419</NoWarn>
 	</PropertyGroup>
 
+	<PropertyGroup Condition=" '$(AutoSetSType)' == 'true'">
+		<DefineConstants>$(DefineConstants);AUTO_SET_STYPE</DefineConstants>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<Content Include="vk.net-64.png" Pack="true" PackagePath="" />
 	</ItemGroup>
