--- a/samples/Directory.Build.props
+++ b/samples/Directory.Build.props
@@ -13,7 +13,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="$(MSBuildThisFileDirectory)..\vulkan\vulkan.csproj" />
-		<Compile Include="$(MSBuildThisFileDirectory)common\*.cs"/>
+		<!--<Compile Include="$(MSBuildThisFileDirectory)common\*.cs"/>-->
 	</ItemGroup>
 	<PropertyGroup Condition=" '$(AutoSetSType)' == 'true'">
 		<DefineConstants>$(DefineConstants);AUTO_SET_STYPE</DefineConstants>
