--- a/vulkan/vulkan.csproj
+++ b/vulkan/vulkan.csproj
@@ -3,9 +3,9 @@
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.1</TargetFrameworks>
 
-		<AssemblyVersion>0.4.1</AssemblyVersion>
+		<AssemblyVersion>0.4.2</AssemblyVersion>
 		<AssemblyName>Vulkan</AssemblyName>
-		<PackageVersion>$(AssemblyVersion)-beta</PackageVersion>
+		<PackageVersion>$(AssemblyVersion)</PackageVersion>
 
 		<Description>Low level vulkan bindings for .net</Description>
 		<Product>Vulkan</Product>
